# reagents

./: .gitignore  .ocamlformat  .prettierrc  .travis.yml  CHANGES.md  COMPARISON.md  LICENSE  LICENSE.md  Makefile  README.md  Reagents.ml  Reagents.mli  Reagents_data.ml  Reagents_sync.ml  _oasis  _tags  benchmark.py  benchmark_hash.py  dune-project  opam  plot.py  reagents-sync.opam  reagents.opam  thoughts.md
data/: Counter.ml  Counter.mli  Elimination_stack.ml  Elimination_stack.mli  MichaelScottQueue.ml  MichaelScott_queue.ml  Treiber_stack.ml  counter.ml
doc/: Reagents.Make.html  Reagents.S.Channel.html  Reagents.S.Ref.html  Reagents.S.html  Reagents.Scheduler.html  Reagents.html  Reagents_data.Make.Counter.html  Reagents_data.Make.Elimination_stack.html  Reagents_data.Make.MichaelScott_queue.html  Reagents_data.Make.Treiber_stack.html  Reagents_data.Make.html  Reagents_data.html  Reagents_sync.Make.Condition_variable.html  Reagents_sync.Make.Countdown_latch.html  Reagents_sync.Make.Exchanger.html  Reagents_sync.Make.Lock.html  Reagents_sync.Make.Recursive_lock.html  Reagents_sync.Make.html  Reagents_sync.html  api.odocl  dev.odocl  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Reagents.Make.html  type_Reagents.S.Channel.html  type_Reagents.S.Ref.html  type_Reagents.S.html  type_Reagents.Scheduler.html  type_Reagents.html  type_Reagents_data.Make.Counter.html  (+12 more)
examples/: benchmark.ml  benchmark_old.ml  benchmark_sharing.ml  benchmark_stealing.ml  catalyst_test.ml  catalyst_test2.ml  catalyst_test3.ml  change_commit.ml  counter_test.ml  counter_test_blocking.ml  dining_philosophers.ml  dune  eli_stack.ml  hash_test.ml  hw_queue.ml  jbuild  lock.ml  lock_queue.ml  lock_queue.mli  lock_stack.ml  lock_stack.mli  lock_test.ml  queue_test.ml  reagent_queue.ml  reagent_queue_test.ml  rec_test.ml  ref_channel.ml  ref_test.ml  sat.ml  sched_ws.ml  sched_ws_affine.ml  stack_test.ml  stack_test_compose.ml  swap_test.ml  swap_test2.ml  three_way.ml  tsx_test.ml  two_lock_queue.ml  two_way.ml  tx_linked_queue.ml  (+2 more)
lib/: .merlin  Backoff.ml  Backoff.mli  CAS.ml  CAS.mli  Channel.ml  Channel.mli  MSQueue.ml  MSQueue.mli  Offer.ml  Offer.mli  PostCommitCAS.ml  PostCommitCAS.mli  Reaction.ml  Reaction.mli  Reagent.ml  Reagent.mli  Ref.ml  Ref.mli  Result.ml  Scheduler.mli  base.ml  base.mli  base_intf.ml  cas.ml  cas.mli  channel.ml  channel.mli  channel_intf.ml  condition_variable.ml  condition_variable.mli  core.ml  core.mli  core_intf.ml  countdown_latch.ml  counter.ml  counter.mli  dune  elimination_stack.ml  exchanger.ml  (+31 more)
lib/data/: counter.ml  counter.mli  counter_intf.ml  elimination_stack.ml  elimination_stack.mli  elimination_stack_intf.ml  exchanger.ml  exchanger.mli  exchanger_intf.ml  michaelScott_queue.ml  michaelScott_queue.mli  treiber_stack.ml  treiber_stack.mli
lib/sync/: condition_variable.ml  condition_variable.mli  condition_variable_intf.ml  countdown_latch.ml  countdown_latch.mli  countdown_latch_intf.ml  lock.ml  lock.mli  lock_intf.ml  recursive_lock.ml  recursive_lock.mli  recursive_lock_intf.ml
pkg/: META  pkg.ml
reagents/: .merlin  base.mli  condition_variable.mli  countdown_latch.ml  countdown_latch.mli  exchanger.ml  jbuild  lock.mli  michaelScott_queue.ml  michaelScott_queue.mli  reagents.mli  recursive_lock.ml  recursive_lock.mli  ref.ml  ref.mli
src/: reagents.ml  reagents_sync.mli
src/data/: michaelScott_queue.ml  treiber_stack.ml
src/lib/: channel.ml  channel.mli  offer.ml  postCommitCas.ml  postCommitCas.mli  reagent.ml  reagent.mli  ref.ml  ref.mli
src/reagents/: .merlin  channel.ml  channel.mli  reagents.ml  reagents.mli  ref.ml  ref.mli
src/reagents-data/: .merlin  jbuild  michaelScott_queue.ml  reagents_data.ml  reagents_data.mli
src/reagents-sync/: .merlin  condition_variable.ml  condition_variable.mli  countdown_latch.ml  countdown_latch.mli  exchanger.mli  jbuild  lock.ml  lock.mli  reagents_sync.ml  recursive_lock.ml  recursive_lock.mli
src/sync/: condition_variable.ml  condition_variable.mli  countdown_latch.ml  recursive_lock.ml  recursive_lock.mli
sync/: Condition_variable.ml  Condition_variable.mli  Countdown_latch.ml  Exchanger.ml  Exchanger.mli  Lock.ml  Lock.mli  Recursive_lock.ml  Recursive_lock.mli  countdown_latch.ml  exchanger.ml
test/: Lock_queue.ml  Lock_stack.ml  counter_test.ml  dining_philosophers.ml  hw_queue.ml  lock_queue.ml  lock_stack.ml  lock_test.ml  queue_test.ml  reagent_queue.ml  rec_test.ml  sched_ws.ml  sched_ws_affine.ml  stack_test.ml  stack_test_compose.ml  swap_test.ml  three_way.ml  trieber_stack.ml  tsx_test.ml  two_way.ml
tests/: catalyst_test.ml  catalyst_test2.ml  catalyst_test3.ml  counter_test.ml  counter_test_blocking.ml  dining_philosophers.ml  dune  eli_stack.ml  hw_queue.ml  lock_test.ml  pair_not_parallel.ml  queue_test.ml  reagent_queue_test.ml  rec_test.ml  ref_channel.ml  ref_test.ml  sat.ml  sched_ws.ml  stack_test.ml  stack_test_compose.ml  swap_test.ml  two_lock_queue.mli  write_skew_test.ml
tests/references/: dune  lock.ml  lock.mli  lock_stack.mli
